--- a/languages/lisp/common-lisp/videos.org
+++ b/languages/lisp/common-lisp/videos.org
@@ -1,3 +1,4 @@
+- channel https://www.youtube.com/@the-lisper/videos
 - stylewarning
   https://www.youtube.com/playlist?list=PLjHa38CO26-PWcJXE1G8XYlwmV4zdjbr9
   https://www.youtube.com/playlist?list=PLjHa38CO26-PS4GeZyayEwe7wLBZChZeE
