--- a/languages/perl.org
+++ b/languages/perl.org
@@ -1,2 +1,3 @@
 - channel https://www.youtube.com/@YAPCNA
 - Perl Web server http://tuxgraphics.org/~guido/scripts/wwwperl.txt
+- codebase https://github.com/trizen/youtube-viewer
